Fix project structure - move all test classes to test directory