@@ -7,9 +7,9 @@ import org.openqa.selenium.JavascriptExecutor;
 import org.openqa.selenium.WebDriver;
 import org.openqa.selenium.WebElement;
 import org.openqa.selenium.support.FindBy;
+import org.openqa.selenium.support.PageFactory;
 import org.openqa.selenium.support.ui.ExpectedConditions;
-import org.openqa.selenium.support.ui.WebDriverWait;
-
+import org.openqa.selenium.support.ui.WebDriverWait; // Add this import
 import java.time.Duration;
 import java.util.List;
 
@@ -25,24 +25,20 @@ import java.util.List;
  */
 public class AlertsPage extends BasePage {
 
-    // Element locators
     @FindBy(id = "alertButton")
-    private WebElement alertButton;
-
-    @FindBy(id = "timerAlertButton")
-    private WebElement timerAlertButton;
+    WebElement alertButton;
 
     @FindBy(id = "confirmButton")
-    private WebElement confirmButton;
+    WebElement confirmButton;
 
     @FindBy(id = "promtButton")
-    private WebElement promptButton;
+    WebElement promptButton;
 
     @FindBy(id = "confirmResult")
-    private WebElement confirmResultText;
+    WebElement confirmResultText;
 
     @FindBy(id = "promptResult")
-    private WebElement promptResultText;
+    WebElement promptResultText;
 
     /**
      * Constructor for AlertsPage.
@@ -50,6 +46,7 @@ public class AlertsPage extends BasePage {
      */
     public AlertsPage(WebDriver driver) {
         super(driver);
+        PageFactory.initElements(driver, this);
     }
 
     /**
@@ -58,15 +55,6 @@ public class AlertsPage extends BasePage {
      */
     public void clickAlertButton() {
         waitForElementToBeClickable(alertButton).click();
-    }
-
-    /**
-     * Clicks the button to trigger a timed alert (appears after 5 seconds).
-     * Waits for the alert to be present after clicking.
-     */
-    public void clickTimerAlertButton() {
-        waitForElementToBeClickable(timerAlertButton).click();
-        waitForAlert();
     }
 
     /**
@@ -84,57 +72,18 @@ public class AlertsPage extends BasePage {
      * Uses a combination of regular click and JavaScript click as fallback.
      */
     public void clickPromptButton() {
-        // First try to handle any ads that might be present
         handleAdIfPresent();
 
         WebElement button = waitForElementToBeClickable(promptButton);
 
         try {
-            // Try to click using regular Selenium click
             button.click();
         } catch (Exception e) {
-            // If regular click fails, use JavaScript click as fallback
             JavascriptExecutor js = (JavascriptExecutor) driver;
             js.executeScript("arguments[0].click();", button);
         }
 
         waitForAlert();
-    }
-
-    /**
-     * Gets the text from the currently displayed alert.
-     * @return Text content of the alert
-     * @throws org.openqa.selenium.NoAlertPresentException if no alert is present
-     */
-    public String getAlertText() {
-        return waitForAlert().getText();
-    }
-
-    /**
-     * Accepts (clicks OK on) the currently displayed alert.
-     * @throws org.openqa.selenium.NoAlertPresentException if no alert is present
-     */
-    public void acceptAlert() {
-        waitForAlert().accept();
-    }
-
-    /**
-     * Dismisses (clicks Cancel on) the currently displayed alert.
-     * @throws org.openqa.selenium.NoAlertPresentException if no alert is present
-     */
-    public void dismissAlert() {
-        waitForAlert().dismiss();
-    }
-
-    /**
-     * Enters text into a prompt dialog and accepts it.
-     * @param text Text to enter into the prompt
-     * @throws org.openqa.selenium.NoAlertPresentException if no alert is present
-     */
-    public void sendKeysToAlert(String text) {
-        Alert alert = waitForAlert();
-        alert.sendKeys(text);
-        alert.accept();
     }
 
     /**
@@ -159,28 +108,22 @@ public class AlertsPage extends BasePage {
      */
     public void handleAdIfPresent() {
         try {
-            // Create a short wait specifically for the ad
             WebDriverWait shortWait = new WebDriverWait(driver, Duration.ofSeconds(3));
 
-            // Try to find and switch to any ad iframe
             shortWait.until(ExpectedConditions.frameToBeAvailableAndSwitchToIt(
                     By.cssSelector("iframe[title*='ad'], iframe[aria-label*='ad'], iframe[title*='Ad.Plus']")));
 
-            // Look for close buttons inside the ad iframe
             List<WebElement> closeButtons = driver.findElements(
                     By.cssSelector("[aria-label*='Close'], [title*='Close'], .close-button, .ads-close-button"));
 
-            // If close button is found, click it
             if (!closeButtons.isEmpty()) {
-                closeButtons.get(0).click();
+                closeButtons.getFirst().click();
                 System.out.println("Ad closed successfully.");
             }
 
         } catch (Exception e) {
-            // If no ad is found or any other error occurs, just continue
             System.out.println("No ad found or could not close ad: " + e.getMessage());
         } finally {
-            // Always switch back to main content
             driver.switchTo().defaultContent();
         }
     }
